[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/GUI/menu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menus" type="Node" parent="."]
script = ExtResource( 1 )

[node name="StartMenu" type="Node" parent="Menus"]

[node name="StartBtn" type="Button" parent="Menus/StartMenu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 28.0
action_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBtn" type="Button" parent="Menus/StartMenu"]
margin_left = 9.0
margin_top = 35.0
margin_right = 93.0
margin_bottom = 55.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitBtn" type="Button" parent="Menus/StartMenu"]
margin_left = 8.0
margin_top = 62.0
margin_right = 92.0
margin_bottom = 82.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayMenu" type="Node" parent="Menus"]

[node name="NewGameBtn" type="Button" parent="Menus/PlayMenu"]
margin_left = 105.0
margin_top = 7.0
margin_right = 189.0
margin_bottom = 27.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameBtn" type="Button" parent="Menus/PlayMenu"]
margin_left = 106.0
margin_top = 34.0
margin_right = 190.0
margin_bottom = 54.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="Menus/PlayMenu"]
margin_left = 105.0
margin_top = 61.0
margin_right = 189.0
margin_bottom = 81.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamemodeMenu" type="Node" parent="Menus"]

[node name="RandomBtn" type="Button" parent="Menus/GamemodeMenu"]
margin_left = 205.0
margin_top = 7.0
margin_right = 289.0
margin_bottom = 27.0
text = "Random (1)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectBtn" type="Button" parent="Menus/GamemodeMenu"]
margin_left = 206.0
margin_top = 34.0
margin_right = 290.0
margin_bottom = 54.0
disabled = true
text = "Select (2)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndlessBtn" type="Button" parent="Menus/GamemodeMenu"]
margin_left = 205.0
margin_top = 61.0
margin_right = 289.0
margin_bottom = 81.0
disabled = true
text = "Endless (3)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="Menus/GamemodeMenu"]
margin_left = 205.0
margin_top = 87.0
margin_right = 289.0
margin_bottom = 107.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapMenuMode2" type="Node" parent="Menus"]

[node name="BackBtn" type="Button" parent="Menus/MapMenuMode2"]
margin_left = 391.0
margin_top = 86.0
margin_right = 475.0
margin_bottom = 106.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavesMenu" type="Node" parent="Menus"]

[node name="OptionsMenu" type="Node" parent="Menus"]

[node name="Difficulty" type="Node" parent="Menus"]

[node name="EasyBtn" type="Button" parent="Menus/Difficulty"]
margin_left = 299.0
margin_top = 7.0
margin_right = 383.0
margin_bottom = 27.0
disabled = true
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediumBtn" type="Button" parent="Menus/Difficulty"]
margin_left = 300.0
margin_top = 34.0
margin_right = 384.0
margin_bottom = 54.0
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardBtn" type="Button" parent="Menus/Difficulty"]
margin_left = 299.0
margin_top = 61.0
margin_right = 383.0
margin_bottom = 81.0
disabled = true
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackDiffBtn" type="Button" parent="Menus/Difficulty"]
margin_left = 299.0
margin_top = 87.0
margin_right = 383.0
margin_bottom = 107.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapMenuMode3" type="Node" parent="Menus"]

[connection signal="button_down" from="Menus/StartMenu/StartBtn" to="Menus" method="_on_Start_button_down"]
[connection signal="button_down" from="Menus/StartMenu/OptionsBtn" to="Menus" method="_on_Options_button_down"]
[connection signal="button_down" from="Menus/StartMenu/ExitBtn" to="Menus" method="_on_ExitBtn_button_down"]
[connection signal="button_down" from="Menus/PlayMenu/NewGameBtn" to="Menus" method="_on_NewGameBtn_button_down"]
[connection signal="button_down" from="Menus/PlayMenu/BackBtn" to="Menus" method="_on_BackBtn_button_down"]
[connection signal="button_down" from="Menus/GamemodeMenu/RandomBtn" to="Menus" method="_on_RandomBtn_button_down"]
[connection signal="button_down" from="Menus/GamemodeMenu/SelectBtn" to="Menus" method="_on_SelectBtn_button_down"]
[connection signal="button_down" from="Menus/GamemodeMenu/EndlessBtn" to="Menus" method="_on_EndlessBtn_button_down"]
[connection signal="button_down" from="Menus/GamemodeMenu/BackBtn" to="Menus" method="_on_BackBtn1_button_down"]
[connection signal="button_down" from="Menus/MapMenuMode2/BackBtn" to="Menus" method="_on_BackMapBtn_button_down"]
[connection signal="button_down" from="Menus/Difficulty/EasyBtn" to="Menus" method="_on_EasyBtn_button_down"]
[connection signal="button_down" from="Menus/Difficulty/MediumBtn" to="Menus" method="_on_MediumBtn_button_down"]
[connection signal="button_down" from="Menus/Difficulty/HardBtn" to="Menus" method="_on_HardBtn_button_down"]
[connection signal="button_down" from="Menus/Difficulty/BackDiffBtn" to="Menus" method="_on_BackDiffBtn_button_down"]
